# ubench

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
examples/common/: fib.rs  fib_memoized.rs
examples/embedded/: .gdbconfig  Cargo.toml  README.md  bench.rs  lib.rs
examples/embedded/.cargo/: config
examples/embedded/xtask/: Cargo.toml  build.rs  xtask.rs
examples/host/: Cargo.toml  bench.rs  lib.rs
src/: bench.rs  lib.rs  metrics.rs
src/reporters/: basic.rs  io.rs  mod.rs
src/runner/: mod.rs  single.rs  suite.rs  support.rs
