[workspace]
members = [
    "xtask"
]

[package]
name = "ubench-embedded-example-tm4c"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
bench = false
test = false

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
test = true
bench = true

[dependencies]
libm = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-write = { git = "https://github.com/rrbutani/panic-write.git" }
tm4c123x-hal = { version = "0.10", features = ["rt"] }

# Normally this would be a dev-dep.
ubench = { path = "../../", features = ["cortex-m"] }

[dev-dependencies]

[profile.dev] # and also `profile.test`
opt-level = 1
debug = true
lto = "thin"
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release] # and also `profile.bench`
opt-level = 3 # or "z"
debug = true
lto = "fat"
overflow-checks = false
debug-assertions = false
incremental = false
codegen-units = 1
